# [package]
# name = "project-1"
# version = "0.1.0"
# edition = "2021"

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[package]
name = "kvs"
version = "0.1.0"
authors = ["leehao <1838249551@qq.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
predicates = "3.0.4"
assert_cmd = "2.0.12"