# [package]
# name = "project-1"
# version = "0.1.0"
# edition = "2021"

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[package]
name = "kvs"
version = "0.1.0"
authors = ["leehao <1838249551@qq.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
predicates = "3.0.4"
assert_cmd = "2.0.12"
tempfile = "3.2.0"
walkdir = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10.1"
tracing-appender = "0.2"
tracing = "0.1"
log4rs = "1.2.0"